--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
             <a class="contact-links" href="mailto:damian.fokt@op.pl"
               >damian.fokt@op.pl</a
             >
+            <br />
+            <span class="bold">G:</span>
+            <a class="contact-links" href="https://github.com/damian-fokt">https://github.com/damian-fokt</a>
+            <br />
+            <span class="bold">L:</span>
+            <a class="contact-links" href="https://www.linkedin.com/in/damian-fokt/">https://www.linkedin.com/in/damian-fokt/</a>
+          </p>
           </p>
         </div>
         <div class="tech-block">
