--- a/index.html
+++ b/index.html
@@ -52,19 +52,6 @@
         <div >
           <h2 class="header-prim">Work Experience</h2>
 
-          <h3 class="job-name">Cashier  <span class="high-light">KFC</span></h3>
-          <p class="date">07.2019 – 08.2021 [2 years 2 months]</p>
-          <ul class="main-list">
-            <li>
-              <span class="main-list-item">Contact with the customer</span>
-            </li>
-            <li>
-              <span class="main-list-item">Work in an international team</span>
-            </li>
-          </ul>
-        </div>
-
-        <div>
           <h3 class="job-name">Construction engineer <span class="high-light">QUMAN</span> </h3>
           <p class="date">07.2021 – 10.2021 [4 months]</p>
           <ul class="main-list">
@@ -72,6 +59,19 @@
             <li>
               <span class="main-list-item"
                 >Ordering products and compiling them in a list</span
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="job-name">Computer software tester <span class="high-light">QUMAN</span> </h3>
+          <p class="date">08.2022 – up to now [8 months]</p>
+          <ul class="main-list">
+            <li><span class="main-list-item">Work in Jira and MS office</span></li>
+            <li>
+              <span class="main-list-item"
+                >Testing the software and replying issues to jira.</span
               >
             </li>
           </ul>
