--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li><span class="main-list-item">Work in Jira and MS office</span></li>
             <li>
               <span class="main-list-item"
-                >Testing the software and replying issues to jira.</span
+                >Testing the software and replying issues to Jira.</span
               >
             </li>
           </ul>
