--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
     <div class="wrapper">
       <main>
         <div class="main-description">
-          <h2 class="job-title">Junior Full-Stack Developer</h2>
+          <h2 class="job-title">QA Tester</h2>
           <h1>Damian Fokt</h1>
           <p class="description">
-            I am a student of the Faculty of Electronics and Information
-            Technology at the Warsaw University of Technology. I started my
-            adventure with programming in embedded systems, now. I am still
-            learning and training in new technologies, I deepen my enthusiasm
-            for programming.
+            I am an engineer at the Faculty of Electronics and Information Technology
+            at the Warsaw University of Technology. I am a software tester by profession
+            and a programming enthusiast in my free time. I am still learning and training
+            in new technologies, deepening my enthusiasm for testing and programming.
           </p>
         </div>
         <div class="Projects">
@@ -52,19 +51,6 @@
         <div >
           <h2 class="header-prim">Work Experience</h2>
 
-          <h3 class="job-name">Construction engineer <span class="high-light">QUMAN</span> </h3>
-          <p class="date">07.2021 – 10.2021 [4 months]</p>
-          <ul class="main-list">
-            <li><span class="main-list-item">Work in MS office</span></li>
-            <li>
-              <span class="main-list-item"
-                >Ordering products and compiling them in a list</span
-              >
-            </li>
-          </ul>
-        </div>
-
-        <div>
           <h3 class="job-name">Computer software tester <span class="high-light">QUMAN</span> </h3>
           <p class="date">08.2022 – up to now [8 months]</p>
           <ul class="main-list">
@@ -75,6 +61,7 @@
               >
             </li>
           </ul>
+          
         </div>
 
         <div>
@@ -84,7 +71,7 @@
             Warsaw University of Technology 
           </h3>
           <h4 class="direct">Electronic engineer</h4>
-          <p class="date">10.2018 – up to now</p>
+          <p class="date">10.2018 – up to 09.2023</p>
         </div>
       </main>
 
@@ -117,6 +104,7 @@
         <div class="tech-block">
           <h2 class="header-sc">Tech skills</h2>
           <ul class="list-sc">
+            <li><span class="list-sc-item">Jira</span></li>
             <li><span class="list-sc-item">HTML</span></li>
             <li><span class="list-sc-item">CSS</span></li>
             <li><span class="list-sc-item">C/C++</span></li>
