--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div >
           <h2 class="header-prim">Work Experience</h2>
 
-          <h3 class="job-name">Computer software tester <span class="high-light">QUMAN</span> </h3>
+          <h3 class="job-name">TA3 - Computer software tester <span class="high-light">Lionbridge</span> </h3>
           <p class="date">08.2022 – up to now [8 months]</p>
           <ul class="main-list">
             <li><span class="main-list-item">Work in Jira and MS office</span></li>
