--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <!--Lewa sekcja-->
@@ -52,7 +53,7 @@
           <h2 class="header-prim">Work Experience</h2>
 
           <h3 class="job-name">TA3 - Computer software tester <span class="high-light">Lionbridge</span> </h3>
-          <p class="date">08.2022 – up to now [1 year 2 months]</p>
+          <p class="date">08.2022 – up to now [1 year 2 months ${y} years, ${m} months]</p>
           <ul class="main-list">
             <li><span class="main-list-item">Work in Jira and MS office</span></li>
             <li>
