--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
             <li>
               <a
                 class="prj-list-item"
-                href="https://github.com/damian-fokt/Training_Record_Prj"
-                >https://github.com/damian-fokt/Training_Record_Prj</a
-              >
-              <span class="prj-list-item">..........</span>[<span class="prj-list-item">C/C++</span>]
+                href="damian-fokt/TechnoGuru"
+                >damian-fokt/TechnoGuru</a
+              ><span class="prj-list-item">.............................</span>[<span class="prj-list-item">PCB</span>]
             </li>
             <li>
               <a
                 class="prj-list-item"
-                href="https://github.com/damian-fokt/AVT5805_DF"
-                >https://github.com/damian-fokt/AVT5805_DF</a
-              ><span class="prj-list-item">.............................</span>[<span class="prj-list-item">PCB</span>]
+                href="https://github.com/damian-fokt/Training_Record_Prj"
+                >https://github.com/damian-fokt/Training_Record_Prj</a
+              ><span class="prj-list-item">..........</span>[<span class="prj-list-item">C/C++</span>]
             </li>
           </ul>
         </div>
@@ -53,8 +52,8 @@
         <div >
           <h2 class="header-prim">Work Experience</h2>
 
-          <h3 class="job-name">TA3 - Computer software tester <span class="high-light">Lionbridge</span> </h3>
-          <p class="date">08.2022 – up to now [1 year 2 months ${y} years, ${m} months]</p>
+          <h3 class="job-name">Computer software tester - TA3<span class="high-light">Lionbridge</span> </h3>
+          <p class="date">08.2022 – up to now [2 years 1 month]</p>
           <ul class="main-list">
             <li><span class="main-list-item">Work in Jira and MS office</span></li>
             <li>
@@ -68,7 +67,11 @@
 
         <div>
           <h2 class="Education">Education</h2>
-
+          <a
+                class="prj-list-item"
+                href="https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/"
+                >https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/</a
+              >
           <h3 class="univeristy">
             Warsaw University of Technology 
           </h3>
@@ -109,8 +112,8 @@
             <li><span class="list-sc-item">Jira</span></li>
             <li><span class="list-sc-item">HTML</span></li>
             <li><span class="list-sc-item">CSS</span></li>
+            <li><span class="list-sc-item">JS</span></li>
             <li><span class="list-sc-item">C/C++</span></li>
-            <li><span class="list-sc-item">Java</span></li>
             <li><span class="list-sc-item">Python</span></li>
           </ul>
         </div>
@@ -130,7 +133,7 @@
             of languages
           </h2>
           <ul class="list-sc">
-            <li><span class="list-sc-item">English - B2</span></li>
+            <li><span class="list-sc-item">English - C1</span></li>
             <li><span class="list-sc-item">Polish - native</span></li>
           </ul>
         </div>
