--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
 
         <div>
           <h2 class="Education">Education</h2>
-          <a
-                class="prj-list-item"
-                href="https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/"
-                >https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/</a
-              >
           <h3 class="univeristy">
             Warsaw University of Technology 
           </h3>
           <h4 class="direct">Electronic engineer</h4>
           <p class="date">10.2018 – up to 09.2023</p>
+           <a
+                class="prj-list-item"
+                href="https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/"
+                >Application of sensors to implement hybrid random number generators</a
+              >
         </div>
       </main>
 
