--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           </h3>
           <h4 class="direct">Electronic engineer</h4>
           <p class="date">10.2018 – up to 09.2023</p>
+          <h4 class="direct">Engineering diploma thesis</h4>
            <a
                 class="prj-list-item"
                 href="https://repo.pw.edu.pl/info/bachelor/WUTa49e3ec74a2449b3aaf576c8d3911ec8/"
