--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <li>
               <a
                 class="prj-list-item"
-                href="damian-fokt/TechnoGuru"
-                >damian-fokt/TechnoGuru</a
+                href="https://github.com/damian-fokt/TechnoGuru"
+                >https://github.com/damian-fokt/TechnoGuru</a
               ><span class="prj-list-item">.............................</span>[<span class="prj-list-item">PCB</span>]
             </li>
             <li>
