--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 class="prj-list-item"
                 href="https://github.com/damian-fokt/TechnoGuru"
                 >https://github.com/damian-fokt/TechnoGuru</a
-              ><span class="prj-list-item">.............................</span>[<span class="prj-list-item">PCB</span>]
+              ><span class="prj-list-item">.............................</span>[<span class="prj-list-item">HTML + JS</span>]
             </li>
             <li>
               <a
