--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
               <a
                 class="prj-list-item"
                 href="https://github.com/damian-fokt/TechnoGuru"
-                >https://github.com/damian-fokt/TechnoGuru</a
-              ><span class="prj-list-item">......</span>[<span class="prj-list-item">HTML + JS</span>]
+                >https://github.com/damian-fokt/TechnoGuru</a><span class="prj-list-item">...............</span>[<span class="prj-list-item">HTML + JS</span>]
             </li>
             <li>
               <a
                 class="prj-list-item"
                 href="https://github.com/damian-fokt/Training_Record_Prj"
-                >https://github.com/damian-fokt/Training_Record_Prj</a
-              ><span class="prj-list-item">..........</span>[<span class="prj-list-item">C/C++</span>]
+                >https://github.com/damian-fokt/Training_Record_Prj</a><span class="prj-list-item">..........</span>[<span class="prj-list-item">C/C++</span>]
             </li>
           </ul>
         </div>
