--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2 class="header-prim">Work Experience</h2>
 
           <h3 class="job-name">Computer software tester - TA3 <span class="high-light"> Lionbridge</span> </h3>
-          <p class="date">08.2022 – up to now [2 years 1 month]</p>
+          <p class="date">08.2022 – up to now</p>
           <ul class="main-list">
             <li><span class="main-list-item">Performed regression testing, functional testing, and reported results in Jira, contributing to improved product quality.</span></li>
             <li><span class="main-list-item">Testing desktop and mobile aplications</span></li>
